# jayson_MetaNN

./: .gitignore  CMakeLists.txt  exec.sh  find.sh  format.sh  readme.md
MetaNN/: CMakeLists.txt  exec.sh  void.cc
MetaNN/data/: bias_vector.h  dynamic.h  scalable_tensor.h  tensor.h  trivial_tensor.h  zero_tensor.h
MetaNN/data/batch/: batch_sequence.h
MetaNN/data/facilities/: allocators.h  category_tags.h  continuous_memory.h  device_tags.h  lower_access.h  shape.h  traits.h
MetaNN/data_copy/: data_copy.h
MetaNN/evaluate/: CMakeLists.txt  eval_buffer.h  eval_dispatcher.h  eval_group.h  eval_handle.h  eval_item.h  eval_plan.h
MetaNN/facilities/: null_param.h  traits.h  type_id.h  var_type_dict.h
MetaNN/facilities/cont_metafuns/: helpers.h  map.h  multi_map.h  sequential.h  set.h  value_sequential.h
MetaNN/layers/composite/: bias_layer.h  compose_kernel.h  linear_layer.h  single_layer_perceptron.h  weight_layer.h
MetaNN/layers/facilities/: interface_fun.h  layer_in_map.h  make_layer.h  policies.h  traits.h
MetaNN/layers/recurrent/: gru_step.h  recurrent_layer.h
MetaNN/model/facilities/: weight_buffer.h
MetaNN/model/param_initializer/: constant_filler.h  gaussian_filler.h  param_initializer.h  uniform_filler.h  var_scale_filler.h
MetaNN/model/weight_cont/: grad_collector.h  load_buffer.h
MetaNN/operation/: conv.h
MetaNN/operation/facilities/: instance_id.h  operation_frame.h  organizer.h  policies.h  tags.h  tail_calculator.h
MetaNN/operation/math/: abs.h  acos.h  acosh.h  add.h  asin.h  asinh.h  cos.h  divide.h  exp.h  multiply.h  negative.h  reduce_sum.h  sigmoid.h  sign.h  sin.h  square.h  substract.h  tan.h  tanh.h
MetaNN/operation/nn/: nll_loss.h  relu.h  softmax.h
MetaNN/operation/others/: interpolate.h
MetaNN/operation/tensor/: dot.h  permute.h  reshape.h  slice.h  tile.h
MetaNN/policies/: policy_container.h  policy_macro_begin.h  policy_operations.h
Tests/OtherTests/: CMakeLists.txt  main.cpp
Tests/OtherTests/facilities/: test_map.cpp  (+3 more)
(+121 files in other folders)
